# s3-sanitization-poc-cdk

./: README.md  cdk.json  package-lock.json  package.json  test.py
.github/workflows/: test.yml
functions/myFunction/: Dockerfile  app.py  pyproject.toml  requirements.txt
lib/: s3-sanitization-test-stack.ts
test/: s3-sanitization-test.test.ts
