[tool.poetry]
name = "myfunction"
version = "0.1.0"
description = ""
authors = ["David Michael <1.david.michael@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.35"
aws-lambda-powertools = "^1.25.6"
requests = "^2.27.1"
scrubadub = "^2.0.0"
tzdata = "^2022.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
